Updates from Overleaf

--- a/Thesis.bib
+++ b/Thesis.bib
@@ -1,309 +1,408 @@
 @article{Aghl2017,
+  title = {A Simplified Model for Estimating Axial Impact Forces Resulting from Debris with Non-Uniform Nonstructural Mass},
   author = {Aghl, P. P. and Naito, C. J. and Riggs, H. R.},
-  title = {A simplified model for estimating axial impact forces resulting from debris with non-uniform nonstructural mass},
-  journal = {Adv. Struct. Eng.},
+  year = {2017},
+  journal = {Advances in Structural Engineering},
   volume = {20},
   number = {6},
   pages = {963--975},
-  year = {2017},
   doi = {10.1177/1369433216668361}
 }
 
+@article{akamatsuIncreaseAcetylCoA1975,
+  title = {Increase in Acetyl {{CoA}} Synthetase Activity after Phenobarbital Treatment},
+  author = {Akamatsu, N. and Nakajima, H. and Ono, M. and Miura, Y.},
+  year = {1975},
+  month = sep,
+  journal = {Biochemical Pharmacology},
+  volume = {24},
+  number = {18},
+  pages = {1725--1727},
+  issn = {0006-2952},
+  doi = {10.1016/0006-2952(75)90013-1},
+  langid = {english},
+  pmid = {15},
+  keywords = {Acetate-CoA Ligase,Acetylesterase,Acetylglucosamine,Animals,Coenzyme A Ligases,Cycloheximide,Glucosamine,Glutamine-Fructose-6-Phosphate Transaminase (Isomerizing),Liver,Male,Phenobarbital,Phosphotransferases,Proteins,Rats,Stimulation Chemical}
+}
+
 @article{Akiyama2013,
+  title = {Reliability of Bridges under Tsunami Hazards: {{Emphasis}} on the 2011 {{Tohoku}} Earthquake},
   author = {Akiyama, M. and Frangopol, D. M. and Arai, M. and Koshimura, S.},
-  title = {Reliability of bridges under tsunami hazards: Emphasis on the 2011 Tohoku earthquake},
+  year = {2013},
   journal = {Earthquake Spectra},
   volume = {29},
   number = {S1},
   pages = {S295--S314},
-  year = {2013},
   doi = {10.1193/1.4000112}
 }
 
 @article{Arduino2018,
+  title = {{{PRJ-1709}}: {{NHERI}} Debris Impact Experiments},
   author = {Arduino, P. and Motley, M. and Eberhard, M. and Cox, D. and Barbosa, A. and Lomonaco, P.},
-  title = {PRJ-1709: NHERI debris impact experiments},
   year = {2018},
   doi = {10.17603/DS2T09V}
 }
 
 @misc{ASCE2017,
+  title = {Minimum Design Loads and Associated Criteria for Buildings and Other Structures},
   author = {{ASCE}},
-  title = {Minimum design loads and associated criteria for buildings and other structures},
-  year = {2017},
-  note = {ASCE/SEI 7-16, Reston, VA}
+  year = {2017}
 }
 
 @misc{BBC2011,
+  title = {Japan Earthquake: {{Tsunami}} Reaches {{US}} West Coast},
   author = {{BBC}},
-  title = {Japan earthquake: Tsunami reaches US West Coast},
-  year = {2011},
-  note = {Accessed July 7, 2017, https://www.bbc.co.uk/news/world-us-canada-12714558}
+  year = {2011}
+}
+
+@inproceedings{Bonus2022,
+  title = {Multi-Scale Numerical Simulation of Tsunami-Driven Debris-Field Impacts},
+  booktitle = {Ports 2022},
+  author = {Bonus, J. and Arduino, P. and Motley, M. and Eberhard, M.},
+  year = {2022},
+  pages = {328--339},
+  doi = {10.1061/9780784484395.033}
+}
+
+@article{bonusTsunamiDebrisMotion2025,
+  title = {Tsunami Debris Motion and Loads in a Scaled Port Setting: {{Comparative}} Analysis of Three State-of-the-Art Numerical Methods against Experiments},
+  shorttitle = {Tsunami Debris Motion and Loads in a Scaled Port Setting},
+  author = {Bonus, Justin and Spr{\"o}er, Felix and Winter, Andrew and Arduino, Pedro and Krautwald, Clemens and Motley, Michael and Goseberg, Nils},
+  year = {2025},
+  month = apr,
+  journal = {Coastal Engineering},
+  volume = {197},
+  pages = {104672},
+  issn = {03783839},
+  doi = {10.1016/j.coastaleng.2024.104672},
+  urldate = {2025-09-27},
+  langid = {english}
 }
 
 @article{Chock2013,
+  title = {{{ASCE}}/{{JSCE Tohoku}} Tsunami Investigation of Structural Damage and Development of the {{ASCE}} 7 Tsunami Design Code for Buildings and Other Structures},
   author = {Chock, G.},
-  title = {ASCE/JSCE Tohoku tsunami investigation of structural damage and development of the ASCE 7 tsunami design code for buildings and other structures},
-  year = {2013},
-  note = {Tsukuba, Japan: Public Works Research Institute (PWRI)}
+  year = {2013}
 }
 
 @article{Derschum2018,
+  title = {Debris Impact under Extreme Hydrodynamic Conditions Part 1: {{Hydrodynamics}} and Impact Geometry},
   author = {Derschum, C. and Nistor, I. and Stolle, J. and Goseberg, N.},
-  title = {Debris impact under extreme hydrodynamic conditions part 1: Hydrodynamics and impact geometry},
-  journal = {Coastal Eng.},
+  year = {2018},
+  journal = {Coastal Engineering},
   volume = {141},
   pages = {24--35},
-  year = {2018},
   doi = {10.1016/j.coastaleng.2018.08.016}
 }
 
+@article{deschampsNegativelyBuoyantDebris2025,
+  title = {Negatively {{Buoyant Debris Impact}} under {{Tsunami-Like Flows}}},
+  author = {Deschamps, Jaril and Stolle, Jacob and Van Bang, Damien Pham},
+  year = {2025},
+  month = nov,
+  journal = {Journal of Waterway, Port, Coastal, and Ocean Engineering},
+  volume = {151},
+  number = {6},
+  pages = {04025026},
+  issn = {0733-950X, 1943-5460},
+  doi = {10.1061/JWPED5.WWENG-2240},
+  urldate = {2025-09-27},
+  langid = {english}
+}
+
+@article{Doyle2024,
+  title = {Large-Scale Flume Tests of Tsunami-Driven Debris Impacts on Slender Columns},
+  author = {Doyle, M. and et al. Lomonaco, P.},
+  year = {2024},
+  journal = {J. Waterway, Port, Coastal, Ocean Eng.}
+}
+
 @article{Gschnitzer2017,
+  title = {Towards a Robust Assessment of Bridge Clogging Processes in Flood Risk Management},
   author = {Gschnitzer, T. and Gems, B. and Mazzorana, B. and Aufleger, M.},
-  title = {Towards a robust assessment of bridge clogging processes in flood risk management},
+  year = {2017},
   journal = {Geomorphology},
   volume = {279},
   pages = {128--140},
-  year = {2017},
   doi = {10.1016/j.geomorph.2016.11.002}
 }
 
 @article{Haehnel2004,
+  title = {Maximum Impact Force of Woody Debris on Floodplain Structures},
   author = {Haehnel, R. and Daly, S.},
-  title = {Maximum impact force of woody debris on floodplain structures},
-  journal = {J. Hydraul. Eng.},
+  year = {2004},
+  journal = {Journal of Hydraulic Engineering},
   volume = {130},
   number = {2},
   pages = {112--120},
-  year = {2004},
   doi = {10.1061/(ASCE)0733-9429(2004)130:2(112)}
 }
 
+@article{karrSexHormoneBinding1978,
+  title = {Sex Hormone Binding Globulin and Transcortin in Human and Baboon Males},
+  author = {Karr, J. P. and Kirdani, R. Y. and Murphy, G. P. and Sandberg, A. A.},
+  year = {1978},
+  journal = {Archives of Andrology},
+  volume = {1},
+  number = {2},
+  pages = {123--129},
+  issn = {0148-5016},
+  doi = {10.3109/01485017808988328},
+  abstract = {TeBG and transcortin were identified in serum from adult male baboons. TeBG values were higher than the TeBG concentration in adult men. The relative competitive abilities of three natural steroids, a synthetic androgen and two synthetic estrogens, for binding sites on TeBG occupied by radioactive DHT were compared. At a 10-fold molar excess, using both baboon and human TeBG, DHT and T were the most effective competitors; E2 was intermediate and DES a very poor one. Using gel filtration, the transcortin concentrations (mg/L) in two baboons were 16.8 and 27.4; the normal range for men is 23--45. The serum transcortin value of a third baboon, determined by equilibrium dialysis, was 0.41 micron/L (21.5 mg/L). Competition studies, using both techniques, showed that progesterone has a slightly higher affinity for baboon transcortin than cortisol and that a synthetic progestin does not bind to transcortin. Plasma binding capacity for synthetic steroids should be tested before they are used for studies on specific tissue receptors contaminated with serum.},
+  langid = {english},
+  pmid = {104672},
+  keywords = {Animals,Diethylstilbestrol,Dihydrotestosterone,Estradiol,Estradiol Congeners,Haplorhini,Humans,Hydrocortisone,Male,Papio,Progesterone,Sex Hormone-Binding Globulin,Testosterone Congeners,Transcortin}
+}
+
 @article{Ko2015,
+  title = {Hydraulic Experiments on Impact Forces from Tsunami-Driven Debris},
   author = {Ko, H. T.-S. and Cox, D. T. and Riggs, H. R. and Naito, C. J.},
-  title = {Hydraulic experiments on impact forces from tsunami-driven debris},
+  year = {2015},
   journal = {J. Waterway, Port, Coastal, Ocean Eng.},
   volume = {141},
   number = {3},
   pages = {04014043},
-  year = {2015},
   doi = {10.1061/(ASCE)WW.1943-5460.0000286}
 }
 
 @article{Kobayashi2012,
+  title = {Simple Hydroelastic Impact Models for Water-Borne Debris},
   author = {Kobayashi, M. H. and Genest, R. and Riggs, H. R. and Paczkowski, K.},
-  title = {Simple hydroelastic impact models for water-borne debris},
+  year = {2012},
   journal = {Proc. Inst. Mech. Eng. M: J. Eng. Marit. Environ.},
   volume = {226},
   number = {2},
-  pages = {170--179},
-  year = {2012}
+  pages = {170--179}
 }
 
 @article{Lebreton2013,
+  title = {Modeling the Transport and Accumulation of Floating Debris Generated by the 11 {{March}} 2011 {{Tohoku}} Tsunami},
   author = {Lebreton, L. C.-M. and Borrero, J. C.},
-  title = {Modeling the transport and accumulation of floating debris generated by the 11 March 2011 Tohoku tsunami},
-  journal = {Mar. Pollut. Bull.},
+  year = {2013},
+  journal = {Marine Pollution Bulletin},
   volume = {66},
   number = {1},
   pages = {53--58},
-  year = {2013},
   doi = {10.1016/j.marpolbul.2012.11.013}
 }
 
 @article{Leonard2011,
+  title = {Scoping Study for Evaluating the Tsunami Vulnerability of {{New Zealand}} Buildings for Use as Evacuation Structures},
   author = {Leonard, G. and Evans, N. and Prasetya, G. and Saunders, W. and Pearse, L. and Monastra, D. and Fraser, S.},
-  title = {Scoping study for evaluating the tsunami vulnerability of New Zealand buildings for use as evacuation structures},
-  journal = {GNS Science Tech. Rep. 2011/36},
-  year = {2011}
+  year = {2011},
+  journal = {GNS Science Tech. Rep. 2011/36}
 }
 
 @article{Madurapperuma2012,
+  title = {Inelastic Dynamic Analysis of an {{RC}} Building Impacted by a Tsunami Water-Borne Shipping Container},
   author = {Madurapperuma, M. A. K. and Mijeyewickrema, A. C.},
-  title = {Inelastic dynamic analysis of an RC building impacted by a tsunami water-borne shipping container},
+  year = {2012},
   journal = {J. Earthquake Tsunami},
   volume = {6},
   number = {1},
   pages = {1250001},
-  year = {2012},
   doi = {10.1142/S1793431112500017}
 }
 
+@inproceedings{Mascarenas2022,
+  title = {Quantifying and Understanding Structural Loading from Wave-Driven Debris Fields},
+  booktitle = {Ports 2022},
+  author = {Mascarenas, D. and Motley, M. R. and Eberhard, M. O. and Arduino, P. and Serrone, A.},
+  year = {2022},
+  pages = {523--534},
+  doi = {10.1061/9780784484395.052}
+}
+
 @article{McCullough2013,
+  title = {Structural Damage under Multiple Hazards in Coastal Environments},
   author = {McCullough, M. and Kareem, A. and Donahue, A. and Westerink, J.},
-  title = {Structural damage under multiple hazards in coastal environments},
+  year = {2013},
   journal = {J. Disaster Res.},
   volume = {8},
   number = {6},
   pages = {1042--1051},
-  year = {2013},
   doi = {10.20965/jdr.2013.p1042}
 }
 
 @article{Naito2014,
+  title = {Procedure for Site Assessment of the Potential for Tsunami Debris Impact},
   author = {Naito, C. and Cercone, C. and Riggs, H. R. and Cox, D.},
-  title = {Procedure for site assessment of the potential for tsunami debris impact},
+  year = {2014},
   journal = {J. Waterway, Port, Coastal, Ocean Eng.},
   volume = {140},
   number = {2},
   pages = {223--232},
-  year = {2014},
   doi = {10.1061/(ASCE)WW.1943-5460.0000222}
 }
 
 @article{Naito2016,
+  title = {Shipping-Container Impact Assessment for Tsunamis},
   author = {Naito, C. and Riggs, H. R. and Wei, Y. and Cercone, C.},
-  title = {Shipping-container impact assessment for tsunamis},
+  year = {2016},
   journal = {J. Waterway, Port, Coastal, Ocean Eng.},
   volume = {142},
   number = {5},
   pages = {05016003},
-  year = {2016},
   doi = {10.1061/(ASCE)WW.1943-5460.0000348}
 }
 
 @misc{Nakaso2011,
+  title = {Tsunami Damage Estimate for {{Hawaii}} Now Tens of Millions},
   author = {Nakaso, D.},
-  title = {Tsunami damage estimate for Hawaii now tens of millions},
-  year = {2011},
-  note = {Star Advertizer, March 14, 2011}
+  year = {2011}
+}
+
+@article{nistorTsunamiDrivenDebrisMotion2017,
+  title = {Tsunami-{{Driven Debris Motion}} and {{Loads}}: {{A Critical Review}}},
+  shorttitle = {Tsunami-{{Driven Debris Motion}} and {{Loads}}},
+  author = {Nistor, Ioan and Goseberg, Nils and Stolle, Jacob},
+  year = {2017},
+  month = jan,
+  journal = {Frontiers in Built Environment},
+  volume = {3},
+  issn = {2297-3362},
+  doi = {10.3389/fbuil.2017.00002},
+  urldate = {2025-09-27},
+  file = {C:\Users\noeko\Zotero\storage\TH5LNG46\Nistor et al. - 2017 - Tsunami-Driven Debris Motion and Loads A Critical Review.pdf}
 }
 
 @misc{NPR2011,
+  title = {Tsunami Waves Hit West Coast, {{Hawaii}}},
   author = {{NPR}},
-  title = {Tsunami waves hit west coast, Hawaii},
-  year = {2011},
-  note = {Accessed July 7, 2017, https://www.npr.org/2011/03/11/134446769/tsunami-warning-wides-to-include-hawaii?t=1593094452415}
+  year = {2011}
 }
 
 @article{Paczkowski2012,
+  title = {A One Dimensional Model for Impact Forces Resulting from High Mass, Low Velocity Debris},
   author = {Paczkowski, K. and Riggs, H. R. and Naito, C. and Lehmann, A.},
-  title = {A one dimensional model for impact forces resulting from high mass, low velocity debris},
-  journal = {Struct. Eng. Struct. Mech.},
+  year = {2012},
   volume = {42},
   number = {6},
   pages = {831--847},
-  year = {2012},
   doi = {10.12989/sem.2012.42.6.831}
 }
 
 @article{Rueben2015,
+  title = {Optical Measurements of Tsunami Inundation and Debris Movement in a Large-Scale Wave Basin},
   author = {Rueben, M. and Cox, D. and Holman, R. and Shin, S. and Stanley, J.},
-  title = {Optical measurements of tsunami inundation and debris movement in a large-scale wave basin},
+  year = {2015},
   journal = {J. Waterway, Port, Coastal, Ocean Eng.},
   volume = {141},
   number = {1},
-  pages = {4010--4029},
-  year = {2015}
+  pages = {4010--4029}
 }
 
 @article{Schmocker2011,
+  title = {Probability of Drift Blockage at Bridge Decks},
   author = {Schmocker, L. and Hager, W. H.},
-  title = {Probability of drift blockage at bridge decks},
-  journal = {J. Hydraul. Eng.},
+  year = {2011},
+  journal = {Journal of Hydraulic Engineering},
   volume = {137},
   number = {4},
   pages = {470--479},
-  year = {2011},
   doi = {10.1061/(ASCE)HY.1943-7900.0000319}
 }
 
 @article{Shafiei2016,
+  title = {Measurements of Tsunami-Borne Debris Impact on Structures Using an Embedded Accelerometer},
   author = {Shafiei, S. and Melville, B. W. and Shamseldin, A. Y. and Beskhyroun, S. and Adams, K. N.},
-  title = {Measurements of tsunami-borne debris impact on structures using an embedded accelerometer},
-  journal = {J. Hydraul. Res.},
+  year = {2016},
+  journal = {Journal of Hydraulic Research},
   volume = {54},
   number = {4},
   pages = {435--449},
-  year = {2016},
   doi = {10.1080/00221686.2016.1170071}
 }
 
 @article{Shekhar2020,
+  title = {Experimental and Numerical Insights on Tsunami-like Wave Forces on Coastal Structures},
   author = {Shekhar, K. and Alam, M. S. and Winter, A. O. and Galant, G. and Barbosa, A. and Motley, M. and Eberhard, M. and Cox, D.},
-  title = {Experimental and numerical insights on tsunami-like wave forces on coastal structures},
+  year = {2020},
   journal = {J. Waterway, Port, Coastal, Ocean Eng.},
   volume = {146},
   number = {4},
   pages = {04020021},
-  year = {2020},
   doi = {10.1061/(ASCE)WW.1943-5460.0000581}
 }
 
 @article{Stolle2018,
+  title = {Debris Impact under Extreme Hydrodynamic Conditions Part 2: {{Impact}} Force Responses for Non-Rigid Debris Collisions},
   author = {Stolle, J. and Derschum, C. and Goseberg, N. and Nistor, I. and Petriu, E.},
-  title = {Debris impact under extreme hydrodynamic conditions part 2: Impact force responses for non-rigid debris collisions},
-  journal = {Coastal Eng.},
+  year = {2018},
+  journal = {Coastal Engineering},
   volume = {141},
   pages = {107--118},
-  year = {2018},
   doi = {10.1016/j.coastaleng.2018.09.004}
 }
 
 @article{Stolle2019,
+  title = {Debris Impact Forces on Flexible Structures in Extreme Hydrodynamic Conditions},
   author = {Stolle, J. and Goseberg, N. and Nistor, I. and Petriu, E.},
-  title = {Debris impact forces on flexible structures in extreme hydrodynamic conditions},
-  journal = {J. Fluids Struct.},
+  year = {2019},
+  journal = {Journal of Fluids and Structures},
   volume = {84},
   pages = {391--407},
-  year = {2019},
   doi = {10.1016/j.jfluidstructs.2018.11.009}
 }
 
+@article{storesundPractololCaffeineCalcium1975,
+  title = {Practolol, Caffeine and Calcium in the Regulation of Mechanical Activity of the Cardiac Ventricle in {{Myxine}} Glutinosa ({{L}}.)},
+  author = {Storesund, A. and Helle, K. B.},
+  year = {1975},
+  month = oct,
+  journal = {Comparative Biochemistry and Physiology. C: Comparative Pharmacology},
+  volume = {52},
+  number = {1},
+  pages = {17--22},
+  issn = {0306-4492},
+  doi = {10.1016/0306-4492(75)90006-4},
+  langid = {english},
+  pmid = {197},
+  keywords = {Animals,Caffeine,Calcium,Dose-Response Relationship Drug,Fishes,Hagfishes,Heart Ventricles,Hydroxydopamines,Myocardial Contraction,Phenoxybenzamine,Phentolamine,Practolol,Propranolol,Reserpine,Theophylline,Ventricular Function}
+}
+
 @article{Suppasri2013,
+  title = {Building Damage Characteristics Based on Surveyed Data and Fragility Curves of the 2011 {{Great East Japan}} Tsunami},
   author = {Suppasri, A. and Mas, E. and Charvet, I. and Gunasekera, R. and Imai, K. and Fukutani, Y. and Abe, Y. and Imamura, F.},
-  title = {Building damage characteristics based on surveyed data and fragility curves of the 2011 Great East Japan tsunami},
-  journal = {Nat. Hazard.},
+  year = {2013},
   volume = {66},
   number = {2},
   pages = {319--341},
-  year = {2013},
   doi = {10.1007/s11069-012-0487-8}
 }
 
-@article{Yao2014,
-  author = {Yao, Y. and Huang, Z. and Lo, E. Y. M. and Shen, H.-T.},
-  title = {A preliminary laboratory study of motion of floating debris generated by solitary waves running up a beach},
-  journal = {J. Earthquake Tsunami},
-  volume = {8},
-  number = {3},
-  pages = {1440006},
-  year = {2014},
-  doi = {10.1142/S1793431114400065}
-}
-
 @article{Tomita2011,
+  title = {Practical Model to Estimate Drift Motion of Vessels by Tsunami},
   author = {Tomita, T. and Honda, K.},
-  title = {Practical model to estimate drift motion of vessels by tsunami},
+  year = {2011},
   journal = {Coastal Eng. Proc.},
   volume = {1},
   number = {32},
   pages = {27},
-  year = {2011},
   doi = {10.9753/icce.v32.management.27}
 }
 
-@inproceedings{Bonus2022,
-  author = {Bonus, J. and Arduino, P. and Motley, M. and Eberhard, M.},
-  title = {Multi-Scale Numerical Simulation of Tsunami-Driven Debris-Field Impacts},
-  booktitle = {Ports 2022},
-  pages = {328--339},
-  year = {2022},
-  doi = {10.1061/9780784484395.033}
+@article{veshohilovaEffectCombinedUse1975,
+  title = {{[Effect of combined use of steroid preparations with pyrroxane on the gonadotropic function of the hypophysis]}},
+  author = {Veshohilova, T. P.},
+  year = {1975},
+  month = oct,
+  journal = {Akusherstvo I Ginekologiia},
+  number = {10},
+  pages = {10--12},
+  issn = {0300-9092},
+  langid = {russian},
+  pmid = {2025},
+  keywords = {Adrenergic alpha-Antagonists,Animals,Estrus,Female,Follicle Stimulating Hormone,Luteinizing Hormone,Megestrol,Mestranol,Ovulation,Pituitary Gland,Pregnancy,Rats}
 }
 
-@inproceedings{Mascarenas2022,
-  author = {Mascarenas, D. and Motley, M. R. and Eberhard, M. O. and Arduino, P. and Serrone, A.},
-  title = {Quantifying and Understanding Structural Loading from Wave-Driven Debris Fields},
-  booktitle = {Ports 2022},
-  pages = {523--534},
-  year = {2022},
-  doi = {10.1061/9780784484395.052}
-}
-
-@article{Doyle2024,
-  author = {Doyle, M. and Lomonaco, P. et al.},
-  title = {Large-scale flume tests of tsunami-driven debris impacts on slender columns},
-  journal = {J. Waterway, Port, Coastal, Ocean Eng.},
-  year = {2024}
+@article{Yao2014,
+  title = {A Preliminary Laboratory Study of Motion of Floating Debris Generated by Solitary Waves Running up a Beach},
+  author = {Yao, Y. and Huang, Z. and Lo, E. Y. M. and Shen, H.-T.},
+  year = {2014},
+  journal = {J. Earthquake Tsunami},
+  volume = {8},
+  number = {3},
+  pages = {1440006},
+  doi = {10.1142/S1793431114400065}
 }
