--- a/main.tex
+++ b/main.tex
@@ -1,9 +1,10 @@
 \documentclass{article}
-\usepackage{graphicx} 
+\usepackage{graphicx}
 \usepackage{booktabs}
 \usepackage{array}
 \usepackage{amsmath}
 \usepackage{subcaption}
+\usepackage{natbib}
 
 \graphicspath{{figures/}}
 \title{Group Effects of Idealized Debris Fields Driven by Tsunami-like Wave}
@@ -14,17 +15,15 @@
 \maketitle
 
 \section{Introduction}
-\begin{itemize}
-    \item Tsunami-driven debris fields impose both short-duration impact loads and sustained damming loads on coastal infrastructure.
-    \item Predicting these forces is challenging because they depend on  nonlinear fluid--structure--debris interactions.
-    \item Debris characteristics that influence loading include:
-    \begin{itemize}
-        \item Orientation (longitudinal, transverse, random; see Figs.~\ref{fig:configurations} and \ref{fig:configurations_random}).
-        \item Size distribution (single-size vs multi-size).
-        \item Surface area density (ratio of tightly packed debris area to debris spread area).
-    \end{itemize}
+Tsunami-driven debris fields pose significant hazards to coastal infrastructure, as they generate both short-duration impact loads and longer-lasting damming loads. Unlike hydrodynamic forces from waves alone, debris-induced forces are difficult to predict due to fluid - debris - structure - interactions. The complex interaction between fluid, structure, and debris creates significant uncertainty in estimating waterborne debris loads. Unlike single-object impacts, debris fields produce both sharp, short-duration impact forces and longer-lasting damming forces. Understanding how debris orientation, arrangement, and initial density influence these loading mechanisms is critical for resilient coastal infrastructure design. The objective of this study is to categorize group effects within debris fields and identify the governing mechanisms of debris–structure interaction. Large-scale flume experiments were conducted with systematically varied initial conditions, including debris orientation (longitudinal, transverse, and random), density, and size distribution (single vs.\ multi). Both unbroken and broken solitary waves were tested. The results highlight clear differences in impact amplification, damming behavior, and the role of randomness in debris loading.
 
-\end{itemize}
+Longitudinal debris alignments (i.e., oriented parallel to the incoming flow) tend to produce larger impacts than transverse configurations, while random fields display greater variability in impact magnitudes (Figures~\ref{fig:configurations} and \ref{fig:configurations_random}). Similarly, single-size debris groups behave differently than multi-size fields, particularly in their ability to form blockages and generate damming forces. Finally, surface area density---defined as the ratio of tightly packed debris cross-sectional area to the total spread area---controls the degree of clogging and thus the overall magnitude of structural loading.
+
+\section{Literature Review} Post Tsunami surveys found that debris-driven damage has been a recurring failure mechanism. For example, reinforced concrete failures were observed during the 2004 Indian Ocean and 2011 Tohoku tsunamis, where large floating debris caused extensive structural damage \citep{Leonard2011,Akiyama2013,Suppasri2013}. Similarly, harbors along the U.S. west coast experienced tens of millions of dollars in damage attributed to floating debris \citep{Nakaso2011}. Recent reviews highlight the need for deeper study of how debris becomes mobilized and transfers momentum to structures, along with probabilistic approaches that reflect debris variability and source proximity, and more attention to the cumulative effects of repeated impacts and damming as debris clusters form \citep{nistorTsunamiDrivenDebrisMotion2017}.
+Foundational studies approached debris impact from different perspectives. Haehnel and Daly \citep{Haehnel2004} performed flume experiments with flood-driven wooden debris and introduced single-degree-of-freedom (SDOF) formulations to reproduce collision behavior. In contrast, Naito et al. \citep{Naito2016} advanced a design-oriented framework that was incorporated into ASCE 7-16, where the Energy Grade Line (EGL) method was proposed to estimate debris velocities, impact forces, and critical impact elevations for coastal structures. Building on these efforts, Stolle et al. \citep{Stolle2018,Stolle2019} conducted flume experiments that demonstrated how impact and damming loads can be separated through signal decomposition and suggested an added mass term to better represent hydrodynamic effects. Recent research also highlights the importance of partially or fully submerged debris, which can significantly alter the magnitude and timing of structural loading. Extending this concept, Deschamps et al. \citep{deschampsNegativelyBuoyantDebris2025} investigated negatively buoyant debris under tsunami-like flows, showing that debris that sinks or stays near the bed can generate distinct impact and damming forces compared with floating debris, emphasizing the need to consider a full range of buoyancy conditions in structural load assessments.
+Geometry and flow interaction have also been shown to matter, with scaled shipping container experiments demonstrating that debris impact velocity is reduced relative to the bore front due to stagnation and streamline effects near the structure \citep{Derschum2018}. Several studies have examined how debris is transported and accumulates in wave-driven flows, highlighting patterns of movement, clustering, and blockage formation. Laboratory investigations, such as Yao et al. \citep{Yao2014}, focused on the motion of model debris under solitary waves, providing insight into transport pathways and the stochastic nature of debris accumulation. Schmocker and Hager \citep{Schmocker2011} further demonstrated that accumulation occurs in two phases: an initial debris build-up that causes a major backwater rise, followed by formation of a debris carpet that extends downstream with only minor additional rise. Within the tested range, the primary factors controlling accumulation and backwater rise are the approach flow Froude number and debris volume, while debris type, mixture, and minor experimental factors have little effect. These studies provide valuable insight into debris behavior during inundation but generally do not quantify the resulting structural loads.
+
+Building on these findings, more recent experimental work has directly addressed multi-debris impacts and damming on structures. Shekhar et al. \citep{Shekhar2020} used scaled, neutrally buoyant blocks to study how debris clusters interact with a vertical test structure under tsunami-like flows, capturing both the initial impact and subsequent low-frequency damming forces. Large-scale flume experiments at Oregon State University (OSU) extended this work by measuring impact and damming forces under varying debris densities, orientations, and flow conditions, while also evaluating the applicability of ASCE 7-22 tsunami load provisions \citep{Doyle2024}. Complementary studies have used flume experiments to improve numerical models of debris-field interactions and their effects on structures \citep{Bonus2022, bonusTsunamiDebrisMotion2025}. Bonus et al. (2025) compared simulations with scaled flume tests, helping to refine predictions of debris movement, stacking, and impacts in a simplified port setting.
 
 \begin{figure}[htbp]
     \centering
@@ -40,29 +39,14 @@
     \label{fig:configurations_random}
 \end{figure}
 
-\section{Testing Methodology}
-\begin{itemize}
-    \item Experiments were conducted in a tsunami flume equipped with a rigid mid-flume structure.
-    \item Two wave types were tested: unbroken solitary waves and broken solitary waves. This paper focuses on the unbroken solitary wave tests. 
-    \item Debris fields were generated in three configurations:
-    \begin{itemize}
-        \item Regular longitudinal (aligned with flow).
-        \item Regular transverse (perpendicular to flow).
-        \item Random (both single-size and multi-size).
-    \end{itemize}
-    \item Force records were decomposed using Butterworth filters:
-    \begin{itemize}
-        \item High-pass filtering to isolate short-duration impact peaks (Fig.~\ref{fig:high_low_pass}).
-        \item Low-pass filtering to capture long-duration damming forces (Fig.~\ref{fig:high_low_pass}).
-    \end{itemize}
-\end{itemize}
+\begin{figure}[htbp] \centering \includegraphics[width=0.8\textwidth]{high_low_pass.png} \caption{Force decomposition using Butterworth filters.} \label{fig:high_low_pass} \end{figure}
 
-\begin{figure}[htbp]
-    \centering
-    \includegraphics[width=0.8\textwidth]{high_low_pass.png}
-    \caption{Force decomposition using Butterworth filters.}
-    \label{fig:high_low_pass}
-\end{figure}
+\section{Testing Methodology}
+The experiments were conducted in a large-scale tsunami flume equipped with a rigid structure placed at mid-flume. Two types of solitary waves were investigated: unbroken solitary waves and broken solitary waves. The present study focuses exclusively on the unbroken solitary wave cases, which provide a clearer baseline for analyzing debris-induced loading mechanisms. Debris fields were prepared in three general configurations: regular longitudinal layouts, regular transverse layouts, and random arrangements that included both single-size and multi-size distributions.
+
+To analyze force signals, the time histories were decomposed using Butterworth filters. High-pass filtering was applied to isolate short-duration impact peaks, while low-pass filtering was used to extract long-duration damming forces (Figure~\ref{fig:high_low_pass}). This filtering approach allowed us to distinguish between transient impact loads and sustained blockage-induced forces, ensuring that each mechanism could be evaluated independently.
+
+Representative examples of impact and damming time histories are shown for both small debris fields (1L) and large debris fields (24L) in Figures~\ref{fig:timehist_combined} and \ref{fig:timehist_damming_combined}. The differences in the magnitude and duration of forces across these cases illustrate how debris quantity strongly alters the loading signature.
 
 \begin{figure}[h!]
     \centering
@@ -102,17 +86,8 @@
     \label{fig:timehist_damming_combined}
 \end{figure}
 
-
-\section{Impact and Damming Reaction forces.}
-\begin{itemize}
-    \item Video evidence and filtered signals revealed that debris impact occurs in two stages:
-    \begin{itemize}
-        \item First impact: initial impact on the unsubmerged structure (Fig.~\ref{fig:first_impact}). 
-        \item Later impacts: submerged impacts caused by debris recirculation (Fig.~\ref{fig:second_impact}).
-        \item  The first impact is characterized by one simultaneous impact while later impacts show to be more scattered and chaotic especially for high debris numbers (Fig.~\ref{fig:timehist_24L_peak}).
-    \end{itemize}
-    \item This behavior was consistent across debris types and configurations, highlighting the need to distinguish between first and late peaks.
-\end{itemize}
+\section{Impact and Damming Reaction Forces}
+Video evidence combined with filtered force records revealed that debris impacts occur in two distinct stages. The first stage is the initial unsubmerged impact, where debris pieces strike the structure immediately upon arrival (Figure~\ref{fig:first_impact}). These impacts are characterized by a sharp and simultaneous peak, particularly in longitudinal configurations. The second stage consists of later submerged impacts, which arise when debris recirculates downstream and strikes the structure again under partially submerged conditions (Figure~\ref{fig:second_impact}). Unlike the first impact, these later impacts are more scattered, chaotic, and prolonged, especially in tests involving larger numbers of debris pieces. The distinction between first and later impacts proved consistent across all debris types and configurations, underscoring the need to treat these two stages as separate mechanisms in structural analysis.
 
 \begin{figure}[htbp]
     \centering
@@ -132,20 +107,17 @@
     \end{subfigure}
     \caption{Impact events: (a) initial unsubmerged impact and (b) later submerged impact.}
     \label{fig:impact_combined}
+    
 \end{figure}
+\section{Results: Regular Configurations}
 
+\subsection{Impact Forces} In regular configurations, the first impact peaks scaled approximately linearly with the number of debris pieces (Figure~\ref{fig:firstpeak_regular_split}). This relationship was clear across both longitudinal and transverse layouts, although the absolute magnitudes differed. Later impacts, by contrast, exhibited nonlinear behavior, showing growth that eventually saturated as debris counts increased (Figure~\ref{fig:laterpeak_regular_split}). This saturation suggests that once a certain number of pieces are present, additional debris no longer contributes significantly to impact loading because not all debris can strike the structure simultaneously.
 
-\section{Results: Impact Reaction Forces}
+Longitudinal arrangements consistently produced the highest impact forces. This trend is attributed to direct alignment with the incoming wave, which promoted synchronous collisions. In contrast, transverse layouts yielded smaller impact peaks. The orientation caused debris to spread laterally, allowing the intervening water layer to cushion impacts and thereby reducing peak magnitudes.
 
-\subsection{Regular Configurations}
-\begin{itemize}
-    \item First impact peaks increased linearly with debris number (Fig.~\ref{fig:firstpeak_regular_remap}).
-    \item Later impacts showed nonlinear growth, saturating at higher debris counts (Fig.~\ref{fig:laterpeak_regular_remap}).
-    \item Longitudinal layouts produced the highest impact forces, while transverse layouts yielded smaller peaks due to water cushioning.
-    \item For the 24T and 16T2 tests, debris field area exceeded the structure area. Only part of the debris contacted the structure, so the data was remapped to reflect the effective area (Figs.~\ref{fig:firstpeak_regular_remap}, \ref{fig:laterpeak_regular_remap}).
-    \item Remapping makes the 24T case comparable to a 12T case, the total debris count still altered the flume hydrodynamics. This explains why the remapped forces (e.g., for 24T) appear lower than the corresponding smaller-group tests.
+For specific cases such as the 24T and 16T2 tests, the lateral extent of the debris field exceeded the structure’s width. Consequently, not all debris pieces were able to make contact with the structure. To address this limitation, the data were adjusted to reflect the effective contact area (Figures~\ref{fig:firstpeak_regular_split} and \ref{fig:laterpeak_regular_split}). This adjustment allowed direct comparison between different configurations. Interestingly, when adjusted, the 24T case behaved similarly to a 12T case in terms of effective contact, although the hydrodynamic influence of the larger debris count still altered the flow field. This explains why the adjusted forces in large debris fields sometimes appeared lower than in smaller cases.
 
-\end{itemize}
+The overall trends are illustrated in Figure~\ref{fig:firstpeak_medians_trend}, which shows that normalized first impact forces exhibit a clear linear trend with increasing debris number. This behavior confirms that debris quantity is a first-order driver of peak impact forces in regular configurations.
 \begin{figure}[htbp]
     \centering
     \begin{subfigure}[t]{0.48\textwidth}
@@ -158,26 +130,13 @@
     \begin{subfigure}[t]{0.48\textwidth}
         \centering
         \includegraphics[width=\textwidth]{FirstPeak_Regular_RemappedT.png}
-        \caption{Remapped.}
+        \caption{adjusted.}
         \label{fig:firstpeak_regular_remap}
     \end{subfigure}
     \caption{First peak forces in regular configurations split by orientation and width.}
     \label{fig:firstpeak_regular_split}
 \end{figure}
 
-\begin{figure}[htbp]
-    \centering
-    \includegraphics[width=0.8\textwidth]{FirstPeak_Regular_RemappedT_MediansTrend.png}
-    \caption{Median normalized first impact values (adjusted debris count) showing a clear linear trend between debris increase and Normalized Impact Reaction Force.}
-    \label{fig:firstpeak_medians_trend}
-\end{figure}
-
-% \begin{figure}[htbp]
-%     \centering
-%     \includegraphics[width=0.8\textwidth]{FirstPeak_Regular_RemappedT.png}
-%     \caption{First peak forces in regular configurations (remapped).}
-%     \label{fig:firstpeak_regular_remap}
-% \end{figure}
 \begin{figure}[htbp]
     \centering
     \begin{subfigure}[t]{0.48\textwidth}
@@ -190,100 +149,14 @@
     \begin{subfigure}[t]{0.48\textwidth}
         \centering
         \includegraphics[width=\textwidth]{LaterPeak_Regular_RemappedT.png}
-        \caption{Remapped.}
+        \caption{adjusted.}
         \label{fig:laterpeak_regular_remap}
     \end{subfigure}
-    \caption{Later peak forces in regular configurations: (a) original trials, (b) remapped trials.}
+    \caption{Later peak forces in regular configurations: (a) original trials, (b) adjusted trials.}
     \label{fig:laterpeak_regular_split}
 \end{figure}
 
-\begin{figure}[htbp]
-    \centering
-    \includegraphics[width=0.8\textwidth]{LaterPeak_Regular_RemappedT_MediansTrend.png}
-    \caption{Median normalized later impact  (adjusted debris count) showing linear increase with added debris. The longitudinal case reaching a saturation after 8 debris pieces while the transverse case has not reached saturation in this experimental setup. }
-    \label{fig:laterpeak_medians_trend}
-\end{figure}
-
-% \begin{figure}[htbp]
-%     \centering
-%     \includegraphics[width=0.8\textwidth]{LaterPeak_Regular_RemappedT.png}
-%     \caption{Later peak forces in regular configurations (remapped).}
-%     \label{fig:laterpeak_regular_remap}
-% \end{figure}
-
-\subsection{Random Configurations}
-\begin{itemize}
-    \item Random debris fields produced more scattered and generally smaller peaks compared to regular configurations. The overall variability of the data increased (Fig.~\ref{fig:random_peaks_first}). 
-    \item Multi-size fields consistently yielded lower impact magnitudes because smaller blocks contributed less momentum (Figs.~\ref{fig:random_peaks_first}, \ref{fig:boxplot_8}, \ref{fig:boxplot_16}, \ref{fig:boxplot_24}). Multi-impact vs.\ single-impact scenarios became more relevant with larger debris groups, as multiple smaller blocks often struck separately rather than together.
-    \item The influence of surface area density was critical in impact likelihood and synchronization:
-    \begin{itemize}
-        \item At low debris counts (e.g., 8 pieces), differences between densities were minimal, since the debris did not spread widely enough across the flume to significantly alter impact probability (Fig.~\ref{fig:boxplot_8}).
-        \item At higher counts (16 and 24 pieces), debris were forced to span the full flume width. This spreading meant that not all blocks could align with the structure, reducing the chance of simultaneous impacts.
-        \item As density increased in these larger groups, more blocks were able to cluster in front of the structure, increasing the probability of impact and producing stronger peaks (Figs.~\ref{fig:boxplot_16}, \ref{fig:boxplot_24}).
-        \item The resulting trends were nonlinear: adding more debris did not guarantee higher peaks, since dispersion could offset the momentum contribution of additional blocks.
-    \end{itemize}
-\end{itemize}
-
-\begin{figure}[htbp]
-    \centering
-    \includegraphics[width=0.8\textwidth]{First_Peak_Random_Single_vs_Multi_ByDensityGradient.png}
-    \caption{First impact forces in random fields. Single sized debris fields consistently yielding higher impact forces than multi sized debris fields. Surface Area density furthermore affects impact magnitude with lower densities resulting in lower peak forces.  }
-    \label{fig:random_peaks_first}
-\end{figure}
-
-\begin{figure}[htbp]
-    \centering
-    \includegraphics[width=0.7\textwidth]{Impact_FirstPeaks_densities_combined.png}
-    \caption{Median impact forces show: the more debris pieces the higher the impact reaction force. Single sized debris fields yield higher impact forces. }
-    \label{fig:first_peaks_combined}
-\end{figure}
-
-\begin{figure}[htbp]
-    \centering
-    \includegraphics[width=0.8\textwidth]{Later_Peak_Random_Single_vs_Multi_ByDensityGradient.png}
-    \caption{Later impact forces in random debris fields show only a slight increase in reaction force from increasing debris count. The effect of density is present in single sized debris fields. In multi sized debris fields density shows no effect. }
-    \label{fig:random_peaks_later}
-\end{figure}
-
-
-\begin{figure}[htbp]
-    \centering
-    \includegraphics[width=0.7\textwidth]{Impact_LaterPeaks_densities_combined.png}
-    \caption{Later impact peaks. I think this plot should not be in here.}
-    \label{fig:later_peaks_combined}
-\end{figure}
-
-\begin{figure}[htbp]
-    \centering
-    \includegraphics[width=0.8\textwidth]{Impact_probabilities.png}
-    \caption{Impact probabilities across random trials show that increasing the width of the debris field will proportionally decrease the percentage of debris impacting the structure.}
-    \label{fig:impact_probabilities}
-\end{figure}
-\begin{figure}[htbp]
-    \centering
-    \includegraphics[width=0.75\textwidth]{First_Peak_Median_Single_vs_Multi_Adjusted.png}
-    \caption{Median normalized first impact peaks in random fields after adjustment by structure width. Single-sized debris fields generate higher impact peaks than multi-sized fields, with increasing debris count raising the force until saturation.}
-    \label{fig:random_first_median_adjusted}
-\end{figure}
-
-\begin{figure}[htbp]
-    \centering
-    \includegraphics[width=0.75\textwidth]{Later_Peak_Median_Single_vs_Multi_Adjusted.png}
-    \caption{Median normalized later impact peaks in random fields after adjustment by structure width. Later peaks show weaker scaling with debris count compared to first peaks, with multi-size fields producing lower forces.}
-    \label{fig:random_later_median_adjusted}
-\end{figure}
-
-
-\section{Results: Damming Reaction Forces}
-\begin{itemize}
-    \item Damming forces, extracted by low-pass filtering, reflected sustained blockage (Figs.~\ref{fig:damming_regular_remap}, \ref{fig:damming_random}).
-    \item Single-size debris: increasing density led to stable jams and higher damming loads, as expected from tighter packing and reduced bypassing flow.
-    \item Multi-size debris: smaller blocks prevented stable blockages, keeping forces lower and making density effects minimal (Fig.~\ref{fig:damming_random}).
-    \item Longitudinal vs.\ transverse: while the overall magnitudes were comparable, transverse cases produced higher damming loads once debris counts exceeded eight. This supports the broader trend that longitudinal configurations dominate impact peaks, while transverse configurations dominate damming.
-    \item Nonlinear behavior was observed, with damming forces saturating at higher debris counts. This parallels the nonlinear growth seen in the later submerged impact stage. This saturation is partly due to the complete blockage being achieved and partly due to debris pieces recirculating.
-\end{itemize}
-
-% According to \cite{bonusEvaluationFluidDrivenDebris}, 
+\subsection{Damming Forces} Damming forces were extracted from low-pass filtered signals, capturing the sustained blockage loads. In single-size debris fields, increasing surface area density promoted tighter packing of debris, which facilitated stable jamming and produced higher damming forces (Figures~\ref{fig:damming_regular_split}). Comparisons between longitudinal and transverse orientations revealed that while overall magnitudes were broadly similar, transverse configurations produced higher damming loads once debris counts exceeded eight. This trend indicates that longitudinal configurations dominate impact peaks, while transverse configurations dominate damming forces. Nonlinear saturation was also observed: as debris counts increased, damming loads eventually plateaued. This behavior parallels the nonlinear growth of later impact peaks and is attributed to both complete blockage conditions and recirculating debris that no longer contributed significantly to additional damming loads.
 \begin{figure}[htbp]
     \centering
     \begin{subfigure}[t]{0.48\textwidth}
@@ -296,63 +169,89 @@
     \begin{subfigure}[t]{0.48\textwidth}
         \centering
         \includegraphics[width=\textwidth]{Damming_Regular_L_T_SplitByTrial_Remapped.png}
-        \caption{Remapped.}
+        \caption{adjusted.}
         \label{fig:damming_regular_remap}
     \end{subfigure}
-    \caption{Damming forces in regular configurations: (a) original trials, (b) remapped trials.}
+    \caption{Damming forces in regular configurations: (a) original trials, (b) adjusted trials.}
     \label{fig:damming_regular_split}
+\end{figure}
+
+\section{Results: Random Configurations}
+Random debris fields, in which debris pieces are distributed without a regular orientation, are first analyzed in terms of unaltered impact and damming forces as a function of the total number of debris pieces and the surface area density within the debris frame. Debris is initially arranged within a rectangular frame, and higher surface area densities require pieces to be more closely packed, which often causes the frame to span a wider section of the flume when lifted. Subsequent adjustments account for partial debris contact using video-derived impact probabilities, and the analysis concludes with corrected median values that isolate the contributions of only the largest debris blocks in multi-size fields, providing insight into the limited effect of smaller pieces on structural loading.
+
+\subsection{Impact Forces} 
+Random debris configurations produced more scattered data compared to regular arrangements. The peak magnitudes were generally smaller, but variability increased considerably. Multi-size debris fields consistently generated lower impact magnitudes than single-size fields because the smaller blocks contributed less momentum. This effect was particularly pronounced in tests with larger debris counts, where multiple smaller blocks often struck separately rather than in a single coherent cluster.
+
+The unaltered gradient plots show these differences most clearly. In the first impact peaks, single-sized debris fields consistently yielded higher forces than multi-sized fields, and increasing surface area density raised the magnitude of impact (Figure~\ref{fig:random_peaks_first}). Later impact peaks, occurring after initial contact and partial submergence, showed only a slight increase with debris count (Figure~\ref{fig:random_peaks_later}). In these later impacts, density effects were visible for single-sized debris fields but largely absent in multi-sized cases.
+
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=0.8\textwidth]{First_Peak_Random_Single_vs_Multi_ByDensityGradient.png}
+    \caption{First impact forces in random fields. Single-sized debris fields consistently yield higher impact forces than multi-sized debris fields. Surface area density furthermore affects impact magnitude, with lower densities resulting in smaller peak forces.}
+    \label{fig:random_peaks_first}
 \end{figure}
 
 \begin{figure}[htbp]
     \centering
-    \includegraphics[width=0.8\textwidth]{Damming_Regular_RemappedT_Medians.png}
-    \caption{Median normalized damming forces for regular trials show that Transverse debris dominates the damming reaction force as debris count increases.}
-    \label{fig:damming_medians_wide}
+    \includegraphics[width=0.8\textwidth]{Later_Peak_Random_Single_vs_Multi_ByDensityGradient.png}
+    \caption{Later impact forces in random debris fields show only a slight increase in reaction force with increasing debris count. The effect of density is present in single-sized debris fields, while in multi-sized fields density shows no effect.}
+    \label{fig:random_peaks_later}
 \end{figure}
 
-% \begin{figure}[htbp]
-%     \centering
-%     \includegraphics[width=0.8\textwidth]{Damming_Regular_L_T_SplitByTrial_Remapped.png}
-%     \caption{Damming forces in regular configurations.}
-%     \label{fig:damming_regular_remap}
-% \end{figure}
+A critical adjustment became necessary because the pre-release debris frame often exceeded the structure’s width when spanning higher densities or debris counts. This geometry meant that not all pieces could reach the structure, and some pieces were effectively excluded from impact. Video analysis confirmed this by counting the actual number of blocks making contact with the structure. From these counts, an \emph{impact probability} was derived, which decreased proportionally as the frame widened relative to the structure (Figure~\ref{fig:impact_probabilities}). To account for this effect, a linear correction was applied to all trials: the effective number of impacting pieces was defined as the nominal debris count multiplied by the ratio of structure width to frame width. This correction ensured comparability between different configurations and removed artificial reductions in observed force magnitudes.
+
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=0.8\textwidth]{Impact_probabilities.png}
+    \caption{Impact probabilities across random trials. Increasing the frame width relative to the structure width proportionally decreases the percentage of debris impacting the structure.}
+    \label{fig:impact_probabilities}
+\end{figure}
+
+The corrected median plots reflect these adjustments. Figure~\ref{fig:random_first_median_adjusted} shows normalized first impact peaks after applying the width-based correction. Single-sized debris fields again produce higher forces than multi-sized fields, with forces rising until saturation as debris counts increase. For multi-sized fields, additional filtering was carried out to isolate only the large blocks. This revealed that the largest blocks generated slightly higher impact peaks than the single-sized debris, while the smaller blocks added only a modest contribution. Thus, while small pieces do matter, the dominant contribution to peak loading comes from the larger blocks.
+
+The same trends were observed in the later impact peaks (Figure~\ref{fig:random_later_median_adjusted}). Single-sized debris produced consistently stronger forces, while multi-sized debris showed weaker responses. Filtering for large blocks confirmed that smaller debris added only marginally to the total force.
+
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=0.75\textwidth]{First_Peak_Median_Single_vs_Multi_Adjusted.png}
+    \caption{Median normalized first impact peaks in random fields after adjustment by structure width. Single-sized debris fields generate higher impact peaks than multi-sized fields. Filtering only the large blocks in multi-size fields reveals that smaller blocks provide additional impact contribution, but only modestly.}
+    \label{fig:random_first_median_adjusted}
+\end{figure}
+
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=0.75\textwidth]{Later_Peak_Median_Single_vs_Multi_Adjusted.png}
+    \caption{Median normalized later impact peaks in random fields after adjustment by structure width. Single-sized debris fields produce higher peaks than multi-sized fields, while filtering for large blocks in multi-size fields again shows that the smaller blocks contribute only marginally to total forces.}
+    \label{fig:random_later_median_adjusted}
+\end{figure}
+
+\subsection{Damming Forces} 
+In random configurations, damming forces followed a different pattern compared to regular layouts. The unaltered gradient plot (Figure~\ref{fig:random_damming_gradient}) shows that single-sized debris fields generated higher sustained loads than multi-sized fields, with surface area density promoting stronger clustering and jamming. In contrast, multi-sized fields disrupted jamming, allowing bypass flow and weakening density effects.
 
 \begin{figure}[htbp]
     \centering
     \includegraphics[width=0.8\textwidth]{Damming_Random_Single_vs_Multi_ByDensityGradient.png}
-    \caption{Normalized damming forces in random debris fields. Single sized debris fields consistently yielding higher impact forces than multi sized debris fields. Surface Area density furthermore affects impact magnitude for single sized debris fields, while having little to no effect on multi sized debris fields.}
+    \caption{Normalized damming forces in random debris fields. Single-sized debris fields consistently yield higher damming forces than multi-sized debris fields. Surface area density further increases sustained loads in single-size cases but has little to no effect in multi-size fields.}
     \label{fig:random_damming_gradient}
 \end{figure}
+
+The corrected median values (Figure~\ref{fig:random_damming_median_adjusted}) show a noteworthy consistency: across all densities and debris counts, normalized damming forces remained close to a 100\% increase over baseline wave loading. This indicates that while density and debris size distribution influenced variability, the sustained force contribution of damming in random fields remained broadly similar across conditions. In other words, random configurations consistently doubled the baseline wave load, with single-size fields amplifying clustering effects and multi-size fields reducing them through blockage disruption.
+
 \begin{figure}[htbp]
     \centering
-    \includegraphics[width=0.6\textwidth]{figures/Damming_Peaks_densities_combined.png}
-    \caption{Medial Normalized damming reaction forces show that for low densities the difference between multi and single sized debris fields is minimal. Increasing density will exacerbate the difference between multi and single sized debris pieces. Increasind density will also lead to increasing damming reaction force.}
-    \label{fig:damming_peaks}
+    \includegraphics[width=0.75\textwidth]{Damming_Median_Single_vs_Multi_Adjusted.png}
+    \caption{Median normalized damming forces in random fields, adjusted by structure width. Across all conditions, damming forces remain around a 100\% increase over wave-only loading, with stronger density effects in single-size fields and weaker effects in multi-size fields due to disrupted jamming.}
+    \label{fig:random_damming_median_adjusted}
 \end{figure}
 
 
-% \section{Flow Velocities}
-% The mean flow velocity in the flume was confirmed to be XYZ. 
-
-\section{Conclusions}
-\begin{itemize}
-    \item Longitudinal debris groups generated the largest impact peaks, while transverse groups dominated damming loads.
-    \item Random and multi-size fields produced smaller and more variable forces.
-    \item Surface area density strongly influenced impact probability once debris spread exceeded structure width.
-    \item For 24T and 16T2 trials, partial contact required remapping.
-    \item First impacts scaled with debris count, while later impacts saturated at higher counts.
-    \item Multi-size fields weakened damming loads due to disrupted jamming.
-\end{itemize}
+\section{Conclusions} The experiments demonstrate that debris orientation, size distribution, and density are all critical factors in determining the forces exerted on coastal structures. Longitudinal groups generated the largest impact peaks, while transverse groups dominated sustained damming forces. Random and multi-size fields generally produced smaller and more variable loads, highlighting their reduced capacity for synchronous impacts and stable blockages. Surface area density strong
 
 \section{Limitations}
-\begin{itemize}
-    \item Due to high impact forces, loading could not be recorded at the front of the flume. All measured forces are reaction forces and include structural vibrations.
-    \item Flume geometry amplified some effects, such as water cushioning, as flow was obstructed by the side walls.
-    \item The relative width of debris and structure limited the representativeness of some tests.
-    \item Practical limits on debris quantity constrained the range of tested cases.
-\end{itemize}
+Several limitations of this study should be acknowledged. First, because of the high impact forces generated during the tests, it was not possible to directly record loads at the front of the flume. As a result, the measurements represent reaction forces transmitted through the structure, which inevitably include contributions from structural vibrations and cannot fully isolate the instantaneous impact loads. Second, the geometry of the flume influenced the flow conditions. In particular, confinement effects from the side walls amplified cushioning by the water layer, altering the magnitude and duration of impacts compared to conditions in an open channel or coastal environment. Third, the relative widths of the debris fields and the test structure constrained the representativeness of certain configurations. When the debris field exceeded the structure width, only partial contact was achieved, requiring data remapping to allow meaningful comparison across trials. Finally, the practical limits on the number of debris pieces that could be deployed restricted the parameter space explored in the experiments. While the tested cases captured a range of densities, sizes, and orientations, the upper bound of debris group sizes was necessarily limited, leaving open the possibility that larger-scale accumulations could produce different scaling relationships. Addressing these constraints in future studies will be critical to improving the generalization of the results and to refining debris-impact models for coastal infrastructure design.
+
 \section{References}
-\bibliographystyle{plain}  % or abbrv, alpha, apa, ieee, etc.
-\bibliography{Thesis}  % matches your .bib file name
+\bibliographystyle{plainnat}  
+\bibliography{Thesis}
 
 \end{document}
