Updates from Overleaf

--- a/Thesis.bib
+++ b/Thesis.bib
@@ -49,12 +49,6 @@
   year = {2017}
 }
 
-@misc{BBC2011,
-  title = {Japan Earthquake: {{Tsunami}} Reaches {{US}} West Coast},
-  author = {{BBC}},
-  year = {2011}
-}
-
 @inproceedings{Bonus2022,
   title = {Multi-Scale Numerical Simulation of Tsunami-Driven Debris-Field Impacts},
   booktitle = {Ports 2022},
@@ -394,6 +388,22 @@
   langid = {russian},
   pmid = {2025},
   keywords = {Adrenergic alpha-Antagonists,Animals,Estrus,Female,Follicle Stimulating Hormone,Luteinizing Hormone,Megestrol,Mestranol,Ovulation,Pituitary Gland,Pregnancy,Rats}
+}
+
+@article{winterTsunamiLikeWaveForces2020,
+  title = {Tsunami-{{Like Wave Forces}} on an {{Elevated Coastal Structure}}: {{Effects}} of {{Flow Shielding}} and {{Channeling}}},
+  shorttitle = {Tsunami-{{Like Wave Forces}} on an {{Elevated Coastal Structure}}},
+  author = {Winter, Andrew O. and Alam, Mohammad S. and Shekhar, Krishnendu and Motley, Michael R. and Eberhard, Marc O. and Barbosa, Andre R. and Lomonaco, Pedro and Arduino, Pedro and Cox, Daniel T.},
+  year = {2020},
+  month = jul,
+  journal = {Journal of Waterway, Port, Coastal, and Ocean Engineering},
+  volume = {146},
+  number = {4},
+  pages = {04020021},
+  issn = {0733-950X, 1943-5460},
+  doi = {10.1061/(ASCE)WW.1943-5460.0000581},
+  urldate = {2025-09-30},
+  langid = {english}
 }
 
 @article{Yao2014,
